update poetry to newer version and fix build accordingly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,66 +8,55 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [project]
-
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "",
     "Natural Language :: English",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
-
 keywords = ["measurement","transport"]
-license = {file = "LICENSE"}
+authors = [
+    {name = "Michiel Dubbelman", email = "m.p.dubbelman@tudelft.nl"}
+]
+license-files = [
+    "LICENSE","CITATION.cff"
+]
+
 name = "TransMeasPy"
 readme = {file = "README.md", content-type = "text/markdown"}
-requires-python = ">=3.11"
-version = "0.1.0"
-
-[tool.poetry]
-name = "transmeaspy"
-version = "0.1.0"
 description = "Instrument-agnostic electronic transport measurement framework built on top of qcodes. TransMeasPy structures experiments around independent (set) and dependent (measured) variables, captures comprehensive instrument and sample metadata for reproducibility, enforces safety limits, and supports adaptable, stoppable measurements."
-authors = ["Michiel Dubbelman <m.p.dubbelman@tudelft.nl>"]
-readme = "README.md"
+version = "0.1.0"
+requires-python = ">=3.11,<4"
 
-[tool.poetry.dependencies]
-python = "^3.12"
-qcodes = "^0.53.0"
-zhinst-qcodes = "^0.7.0"
-qcodes-contrib-drivers = "^0.23.0"
-pyqt5-qt5 = "5.15.2"
-quantify = "^0.0.5"
+dependencies = [
+    "qcodes>=0.53.0,<1",
+    "zhinst-qcodes>=0.7.0,<1",
+    "qcodes-contrib-drivers>=0.23.0,<1",
+    "pyqt5-qt5==5.15.2",
+    "quantify>=0.0.5,<1"
+]
 
-[tool.poetry.group.dev.dependencies]
-build = "^1.3.0"
-bump-my-version = "^1.2.2"
-coverage = {extras = ["toml"], version = "^7.10.6"}
-pytest = "^8.4.2"
-pytest-cov = "^7.0.0"
-ruff = "^0.13.0"
-sphinx = "^8.2.3"
-sphinx-rtd-theme = "^3.0.2"
-sphinx-autoapi = "^3.6.0"
-tox = "^4.30.2"
-myst-parser = "^4.0.1"
+[dependency-groups]
+docs = [
+    "sphinx (>=8.2.3,<9.0.0)",
+    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
+    "sphinx-autoapi (>=3.6.0,<4.0.0)",
+    "myst-parser (>=4.0.1,<5.0.0)"
+]
+dev = [
+    {include-group = "docs"},
+    "bump-my-version (>=1.2.2,<2.0.0)",
+    "coverage (>=7.10.6,<8.0.0)",
+    "pytest (>=8.4.2,<9.0.0)",
+    "pytest-cov (>=7.0.0,<8.0.0)",
+    "ruff (>=0.13.0,<0.14.0)",
+    "tox (>=4.30.2,<5.0.0)"
+]
 
-
-[tool.poetry.group.docs.dependencies]
-sphinx = "^8.2.3"
-sphinx-rtd-theme = "^3.0.2"
-sphinx-autoapi = "^3.6.0"
-myst-parser = "^4.0.1"
-
-
-[tool.poetry.group.publishing.dependencies]
-build = "^1.3.0"
-twine = "^6.2.0"
-wheel = "^0.45.1"
 
 [project.urls]
 Repository = "https://github.com/Pjieter/TransMeasPy"
@@ -87,7 +76,7 @@ command_line = "-m pytest"
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py38,py39,py310,py311,py312
+envlist = py311,py312,py313
 skip_missing_interpreters = true
 [testenv]
 commands = pytest
@@ -149,3 +138,4 @@ filename = "CITATION.cff"
 
 [[tool.bumpversion.files]]
 filename = "docs/conf.py"
+
