--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,21 +14,30 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      matrix:
+        python-version: ['3.12']
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.9
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
       - name: Python info
         shell: bash -e {0}
         run: |
           which python
           python --version
-      - name: Upgrade pip and install dependencies
+      - name: Setup a local virtual environment (if no poetry.toml file)
         run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install .[dev,publishing]
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - uses: actions/cache@v4
+        name: Define a cache for the virtual environment based on the dependencies lock file
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+      - name: Install the project dependencies
+        run: poetry install --all-groups
       - name: Install pandoc using apt
         run: sudo apt install pandoc        
       - name: Build documentation
