--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -22,15 +22,28 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+      - name: Python Poetry Action
+        uses: abatilo/actions-poetry@v4.0.0
+        with:
+          poetry-version: 2.2
       - name: Python info
         shell: bash -e {0}
         run: |
           which python
           python --version
-      - name: Install dependencies
-        run: python -m pip install .[dev]
-      - name: Run unit tests with coverage
-        run: python -m pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml tests/
+      - name: Setup a local virtual environment (if no poetry.toml file)
+        run: |
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - uses: actions/cache@v4
+        name: Define a cache for the virtual environment based on the dependencies lock file
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+      - name: Install the project dependencies
+        run: poetry install --all-groups
+      - name: Run the automated tests (for example)
+        run: poetry run pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml tests/
       - name: Correct coverage paths
         run: sed -i "s+$PWD/++g" coverage.xml
       - name: SonarCloud Scan
