Fixing sonar setup

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=Pjieter
 sonar.projectKey=Pjieter_TransMeasPy
+sonar.organization=pjieter
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src/transmeaspy/
 sonar.tests=tests/
