--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -41,7 +41,9 @@ jobs:
           path: ./.venv
           key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
-        run: poetry install --all-groups
+        run: |
+          poetry install --all-groups
+          eval $(poetry env activate)
       - name: Install pandoc using apt
         run: sudo apt install pandoc        
       - name: Build documentation
