--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,17 +34,10 @@ jobs:
         run: |
           which python
           python --version
-      - name: Setup a local virtual environment (if no poetry.toml file)
-        run: |
-          poetry config virtualenvs.create true --local
-          poetry config virtualenvs.in-project true --local
-      - uses: actions/cache@v4
-        name: Define a cache for the virtual environment based on the dependencies lock file
-        with:
-          path: ./.venv
-          key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
-        run: poetry install --all-groups
+        run: |
+          poetry lock --no-cache --regenerate
+          poetry install --all-groups
       - name: Run the automated tests (for example)
         run: poetry run pytest -v
       - name: Build the package
@@ -71,15 +64,6 @@ jobs:
         run: |
           which python
           python --version
-      - name: Setup a local virtual environment (if no poetry.toml file)
-        run: |
-          poetry config virtualenvs.create true --local
-          poetry config virtualenvs.in-project true --local
-      - uses: actions/cache@v4
-        name: Define a cache for the virtual environment based on the dependencies lock file
-        with:
-          path: ./.venv
-          key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
         run: poetry install --all-groups
       - name: Check style against standards using ruff
