Activate environment before making docs

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -31,21 +31,12 @@ jobs:
         run: |
           which python
           python --version
-      - name: Setup a local virtual environment (if no poetry.toml file)
-        run: |
-          poetry config virtualenvs.create true --local
-          poetry config virtualenvs.in-project true --local
-      - uses: actions/cache@v4
-        name: Define a cache for the virtual environment based on the dependencies lock file
-        with:
-          path: ./.venv
-          key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
-        run: |
-          poetry install --all-groups
-          eval $(poetry env activate)
+        run: poetry install --all-groups
       - name: Install pandoc using apt
         run: sudo apt install pandoc        
       - name: Build documentation
-        run: make coverage doctest html
+        run: |
+          eval $(poetry env activate)
+          make coverage doctest html
         working-directory: docs
