--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,7 +1,8 @@
 version: 2
-python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.12"
+sphinx:
+  configuration: docs/source/conf.py
