--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,5 +4,14 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "3.12"
+  jobs:
+    post_create_environment:
+      # Install poetry
+      - pip install poetry
+      # Tell poetry to not use a virtual environment
+      - poetry config virtualenvs.create false
+    post_install:
+      # Install dependencies
+      - poetry install --with docs
 sphinx:
   configuration: docs/conf.py
